# BeforeEngine

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
Source/: BeforeEngine.cpp  BeforeEngine.h  BeforeRHI.h  BeforeRHI_DX12.cpp  BeforeRHI_DX12.h  DX12App.cpp  DX12App.h  DxException.cpp  DxException.h  EngineApp.cpp  EngineApp.h  GameTime.cpp  GameTime.h  GameTimer.cpp  GameTimer.h  RHIBase.h  RHIMath.h  Vertex.h  before_dx12.h  begin.cpp  main.cpp
